fix: Replace gaps with margings

--- a/#src/scss/base/_image.scss
+++ b/#src/scss/base/_image.scss
@@ -9,4 +9,5 @@
 .button-image {
 	width: 6px;
 	padding-bottom: 12px;
+	margin-left: 1.2rem;
 }
